Caching strategy updates and fix disclaimer not showing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,6 +95,14 @@ body {
 
 .disclaimer {
   color: white;
+  min-height: 2rem;
+  margin-bottom: 3rem;
+  width: 100%;
+  position: absolute;
+  right: 0;
+  padding: 1rem;
+  padding-bottom: 1.75rem;
+  background-color: rgba(0, 0, 0, 0.5);
   a {
     text-decoration: none;
     color: white;
